# DoodleJump

./: .build.sh.swp  .clang-format  .run.sh.swp  CMakeLists.txt  README.md  TO DO.txt  build.sh  run.sh
.circleci/: .config.yml.swp
Doxygen/: Doxyfile
Doxygen/html/: AbstractEntityFactory_8h_source.html  BG__Tile_8h_source.html  Bonus_8h_source.html  Camera_8h_source.html  Clock_8h_source.html  ConcreteFactory_8h_source.html  Coordinate_8h_source.html  Entity_8h_source.html  Game_8h_source.html  HorizontalPlatform_8h_source.html  Object_8h_source.html  Observable_8h_source.html  ObserverEvent_8h_source.html  Observer_8h_source.html  Platform_8h_source.html  Player_8h_source.html  Random_8h_source.html  SFMLBG__Tile_8h_source.html  SFMLEntity_8h_source.html  SFMLHorizontalPlatform_8h_source.html  SFMLJetpack_8h_source.html  SFMLObject_8h_source.html  SFMLPlatform_8h_source.html  SFMLPlayer_8h_source.html  SFMLSprings_8h_source.html  SFMLTempPlatform_8h_source.html  SFMLVerticalPlatform_8h_source.html  Score_8h_source.html  Springs_8h_source.html  TempPlatform_8h_source.html  VerticalPlatform_8h_source.html  World_8h_source.html  annotated.html  classDoodleJump_1_1AbstractEntityFactory-members.html  classDoodleJump_1_1AbstractEntityFactory.html  classDoodleJump_1_1AbstractEntityFactory__inherit__graph.map  classDoodleJump_1_1AbstractEntityFactory__inherit__graph.md5  classDoodleJump_1_1BG__Tile-members.html  classDoodleJump_1_1BG__Tile.html  classDoodleJump_1_1BG__Tile__coll__graph.map  (+164 more)
Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+16 more)
Doxygen/latex/: annotated.tex  classDoodleJump_1_1AbstractEntityFactory.tex  classDoodleJump_1_1AbstractEntityFactory__inherit__graph.md5  classDoodleJump_1_1BG__Tile.tex  classDoodleJump_1_1BG__Tile__coll__graph.md5  classDoodleJump_1_1Bonus.tex  classDoodleJump_1_1Bonus__coll__graph.md5  classDoodleJump_1_1Bonus__inherit__graph.md5  classDoodleJump_1_1Camera.tex  classDoodleJump_1_1Clock.tex  classDoodleJump_1_1Coordinate.tex  classDoodleJump_1_1Entity.tex  classDoodleJump_1_1Entity__inherit__graph.md5  classDoodleJump_1_1HorizontalPlatform.tex  classDoodleJump_1_1HorizontalPlatform__coll__graph.md5  classDoodleJump_1_1Jetpack.tex  classDoodleJump_1_1Jetpack__coll__graph.md5  classDoodleJump_1_1Object.tex  classDoodleJump_1_1Object__coll__graph.md5  classDoodleJump_1_1Object__inherit__graph.md5  classDoodleJump_1_1Observable.tex  classDoodleJump_1_1Observable__inherit__graph.md5  classDoodleJump_1_1Observer.tex  classDoodleJump_1_1ObserverEvent.tex  classDoodleJump_1_1Observer__inherit__graph.md5  classDoodleJump_1_1Platform.tex  classDoodleJump_1_1Platform__coll__graph.md5  classDoodleJump_1_1Platform__inherit__graph.md5  classDoodleJump_1_1Player.tex  classDoodleJump_1_1Player__coll__graph.md5  classDoodleJump_1_1Score.tex  classDoodleJump_1_1Springs.tex  classDoodleJump_1_1Springs__inherit__graph.md5  classDoodleJump_1_1TempPlatform.tex  classDoodleJump_1_1TempPlatform__coll__graph.md5  classDoodleJump_1_1VerticalPlatform.tex  classDoodleJump_1_1VerticalPlatform__inherit__graph.md5  classDoodleJump_1_1World.tex  classGame.tex  classRandom.tex  (+26 more)
circleci/: config.yml
src/: CMakeLists.txt  main.cpp
src/GameLogic/: Clock.cpp  Clock.h  Random.cpp  Random.h
src/GameLogic/Camera/: Camera.cpp  Camera.h
src/GameLogic/Coordinate/: Coordinate.cpp  Coordinate.h
src/GameLogic/Entities/: BG_Tile.cpp  BG_Tile.h  Bonus.cpp  Bonus.h  Entity.cpp  Entity.h  HorizontalPlatform.cpp  HorizontalPlatform.h  MovingObject.cpp  MovingObject.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Springs.cpp  Springs.h  TempPlatform.cpp  TempPlatform.h  VerticalPlatform.cpp  VerticalPlatform.h  World.cpp  World.h  jetpack.cpp  jetpack.h
src/GameLogic/Factory/: AbstractEntityFactory.cpp  AbstractEntityFactory.h  EntityFactory.cpp  EntityFactory.h
src/GameLogic/Include/: AbstractEntityFactory.h
src/GameLogic/Include/Entities/: MovingObject.h  Object.h  Player.h  World.h
src/GameLogic/Observer/: Observable.cpp  Observable.h  Observer.cpp  Observer.h  ObserverEvent.cpp  ObserverEvent.h
src/GameLogic/Score/: Score.cpp  Score.h
src/GameLogic/Source/: AbstractEntityFactory.cpp  Coordinate.cpp  EntityFactory.cpp
src/GameLogic/Source/Entities/: Entity.cpp  MovingObject.cpp  Object.cpp  Player.cpp  World.cpp
src/GameLogic/Uitlity/: Clock.h
src/GameLogic/Utility/: Clock.cpp  Clock.h  Random.cpp  Random.h
src/SFMLConversion/Camera/: Camera.cpp  Camera.h
src/SFMLConversion/Entities/: SFMLBG_Tile.cpp  SFMLBG_Tile.h  SFMLEntity.cpp  SFMLEntity.h  SFMLHorizontalPlatform.cpp  SFMLHorizontalPlatform.h  SFMLJetpack.cpp  SFMLJetpack.h  SFMLObject.cpp  SFMLObject.h  SFMLPlatform.cpp  SFMLPlatform.h  SFMLPlayer.cpp  SFMLPlayer.h  SFMLSprings.cpp  SFMLSprings.h  SFMLTempPlatform.cpp  SFMLTempPlatform.h  SFMLVerticalPlatform.cpp  SFMLVerticalPlatform.h
src/SFMLConversion/Factory/: ConcreteFactory.cpp  ConcreteFactory.h
src/SFMLConversion/Game/: Game.cpp  Game.h
src/SFMLConversion/Include/: AbstractEntityFactory.h  EntityFactory.h  Game.h  SFMLEntityFactory.h  Transformation.h
src/SFMLConversion/Include/Entities/: SFMLEntity.h  SFMLPlayer.h
src/SFMLConversion/SFMLFactory/: SFMLEntityFactory.cpp  SFMLEntityFactory.h
src/SFMLConversion/Source/: AbstractEntityFactory.cpp  EntityFactory.cpp  Game.cpp  SFMLEntityFactory.cpp  Transformation.cpp
src/SFMLConversion/Source/Entities/: SFMLEntity.cpp  SFMLPlayer.cpp
